foldermerge is working :)
put some detection if it's main or other. if not it just uses out.zzz still.

--- a/zzzDeArchive/zzzDeArchive.csproj
+++ b/zzzDeArchive/zzzDeArchive.csproj
@@ -55,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="foldermerge.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
