added the logger to the projects.
having issues with nothing for them to send us so i cant see the problem.

--- a/zzz/zzz.csproj
+++ b/zzz/zzz.csproj
@@ -51,5 +51,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.csproj">
+      <Project>{dbbda1cb-61e1-4021-844c-c820270a929a}</Project>
+      <Name>Logger</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
