--- a/zzz/zzz.csproj
+++ b/zzz/zzz.csproj
@@ -64,9 +64,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtensionBinaryReader.cs" />
     <Compile Include="FileData.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubStream.cs" />
     <Compile Include="Zzz.cs" />
   </ItemGroup>
   <ItemGroup>
