--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,12 +64,16 @@ jobs:
     #    uses a compiled language
 
     - run: |
+        wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O /tmp/packages-microsoft-prod.deb
+        sudo dpkg -i /tmp/packages-microsoft-prod.deb
         sudo apt update
-        sudo apt-get --assume-yes install nuget mono-complete mono-devel gtk-sharp3
-        echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | sudo debconf-set-selections
-        sudo apt-get --assume-yes install ttf-mscorefonts-installer
-        cd ..  
-        nuget restore
+        sudo apt-get install -y apt-transport-https
+        sudo apt-get install -y dotnet-sdk-5.0
+        sudo apt install gnupg ca-certificates
+        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+        echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+        sudo apt update
+        sudo apt install -y mono-devel
         msbuild
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
